src/corelib/serialization/qcbormap.cpp
@@ -834,9 +834,8 @@ QCborValueRef QCborMap::operator[](const QCborValue &key)
  */
 QCborMap::iterator QCborMap::find(qint64 key)
 {
+    detach();
     auto it = constFind(key);
-    if (it != constEnd())
-        detach();
     return { d.data(), it.item.i };
 }
 
@@ -860,9 +859,8 @@ QCborMap::iterator QCborMap::find(qint64 key)
  */
 QCborMap::iterator QCborMap::find(QLatin1String key)
 {
+    detach();
     auto it = constFind(key);
-    if (it != constEnd())
-        detach();
     return { d.data(), it.item.i };
 }
 
@@ -886,9 +884,8 @@ QCborMap::iterator QCborMap::find(QLatin1String key)
  */
 QCborMap::iterator QCborMap::find(const QString & key)
 {
+    detach();
     auto it = constFind(key);
-    if (it != constEnd())
-        detach();
     return { d.data(), it.item.i };
 }
 
@@ -912,9 +909,8 @@ QCborMap::iterator QCborMap::find(const QString & key)
  */
 QCborMap::iterator QCborMap::find(const QCborValue &key)
 {
+    detach();
     auto it = constFind(key);
-    if (it != constEnd())
-        detach();
     return { d.data(), it.item.i };
 }
 
